assets/css/style.css
* {
    box-sizing: border-box;
    margin:0;
    padding:0;
}

:root {
    --textPink: rgb(193, 28, 214);
    font-size: 100%;
    --imgWidth: 40vw;
    --imgHeight: 40vh;
}

header {
    display:inline-block;
    color:var(--textPink);
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    text-align: center;
    padding: 20px;
    width:100%;
    background-color: #2a607c;
}

.h1Colour {
    font-size: 3em;
    color:var(--textPink);
    font-weight:400;
    margin-bottom: .5em;
}

.h2Colour {
    font-size: 1.75em;
    color:white;
    margin-bottom: .5714em;
}

h2{
    color:var(--textPink);
    font-size: 1.75em;
}

h3{
    color:var(--textPink);
    margin-top:10px;
    margin-bottom:10px;
}

.effects {
    color: var(--textPink);
    font-size: 80%;
    font-style: italic;
    animation-name: example;
    animation-duration: 6s;
}

.columns {
    flex-wrap: wrap;
    justify-content: center;
}

.card {
    border: 2px solid var(--textPink);
    height: 100%;
    display: flex;
    flex-direction: column;
}
  
.card-content {
    background-color: #bfbfbd;
    color: black;
    font-weight: bold;
    height: 100%;
    width:100%;
}

#aboutMe a{
    color:var(--textPink);
    font-size:1.5rem;
} 

.old-pic{
    background-image: url(../images/house-black.jpg)
}
.new-pic{
    background-image: url(../images/house-colour.png);
}

#heroImg{
    width: 100vw;
    height: 100vh; 
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    cursor: crosshair;
}

a:hover {
    color:black;
}

footer {
    width:100%;
    padding: 20px;
    text-align: center;
    background-color: #2a607c;
}

.icons {
    display:flex;
}

.icons li{
    flex-direction:row;
    flex:1 1 auto;
    list-style-type: none;
    margin-top:15px;
}

.icons li a {
   justify-content: space-evenly;
    color:white;
}

.fa-facebook { 
    list-style-type: none;
    margin-right:22px; 
} 
.fa-linkedin{
    list-style-type: none;
    margin-right:15px; 
}
.fa-twitter {
    list-style-type: none;
    margin-right:15px; 
}
.fa-instagram {
    list-style-type: none;
    margin-right:15px; 
}
.fa-envelope {
    margin-right:10px; 
}


@keyframes example {
    from {background-color:yellow;}
    to {background-color:green;}  
}

